fix sidebar z-index

--- a/public/assets/css/header-css.css
+++ b/public/assets/css/header-css.css
@@ -1054,14 +1054,14 @@ input:checked + .switch-background:active::before {
     right: 0;
     bottom: 0;
     background-color: rgba(0,0,0,0.5);
-    z-index: 1000;
+    z-index: 1001;
     cursor: pointer;
 }
 
 .expanding-navbar-mobile {
     transform: translate(-100%, 0px);
     transition: all 0.2s ease;
-    z-index: 1001;
+    z-index: 1002;
 }
 
 .closing-navbar-mobile {
